# sfg_llm

./: README.md  pyproject.toml
evaluation_scripts/: evaluate_litbank.py  evaluate_pdnc.py
sfg_audiobook/: cli.py
sfg_audiobook/common/: errors.py  utils.py
sfg_audiobook/components/: ComponentParser.py  ComponentsRegister.py  __init__.py
sfg_audiobook/components/abstract/: AbstractStructuredLLMComponent.py  __init__.py
sfg_audiobook/pipeline/: Pipeline.py
sfg_audiobook/sfg_types/: Character.py  PipelineData.py  TTSSpeaker.py  TTSVoice.py  TextPart.py  __init__.py
sfg_audiobook/structure/: AbstractCharacterExtractor.py  AbstractCharacterToSpeakerMatcher.py  AbstractComponent.py  AbstractQuotationAttributor.py  AbstractTTS.py  __init__.py
sfg_audiobook/templates/: character_extraction_prompt_content_1.jinja  character_extraction_prompt_system_1.jinja  character_extraction_system_prompt_1.jinja  character_extraction_system_prompt_complex.jinja  character_matcher_prompt_content_1.jinja  character_matcher_system_prompt_complex.jinja  quotation_extraction_and_attribution_prompt_content_1.jinja  quotation_extraction_and_attribution_system_prompt_0.jinja  quotation_extraction_and_attribution_system_prompt_1.jinja  quotation_extraction_and_attribution_system_prompt_complex.jinja  quotation_extraction_and_attribution_system_prompt_complex_fewshot.jinja  quotation_extraction_and_attribution_system_prompt_empty.jinja  quotation_extraction_and_attribution_system_prompt_simple.jinja
sfg_audiobook/types/: Character.py  TTSSpeaker.py  TextPart.py
(+25 files in other folders)
