[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sfg_audiobook"
version = "0.0.1"
dependencies = [
    "openai",
    "pydantic",
    "jinja2",
    "litellm",
    "tqdm",
    "numpy",
    "levenshtein",
    "google-genai",
    "azure-cognitiveservices-speech",
    "pydub",
    'importlib-metadata; python_version>"3.12"',
]

[tool.setuptools]
packages = ["sfg_audiobook"]

[project.scripts]
sfg_audiobook = "sfg_audiobook.cli:run_from_cli"
